<resources>
    <string name="app_name">Greener</string>
    <string name="mail_hint">Mail</string>
    <string name="psw_hint">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup_here">Sign up here</string>
    <string name="keep_logged">Keep me logged in</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_minigames">Giochi</string>
    <string name="menu_calendar">Calendario</string>
    <string name="menu_calculator">Carbon Footprint</string>
    <string name="profile_page_name">Profilo</string>
    <string name="logout_menu_item">Logout</string>
    <string name="login_menu_item">Login</string>
    <string name="points">Punti</string>
    <string name="btn_R1">R1</string>
    <string name="btn_R2">R2</string>
    <string name="btn_R3">R3</string>
    <string name="btn_R4">R4</string>
    <string name="trash_bin_game_name">Proteggi l\'ambiente</string>
    <string name="garbage_sorter_game_name">Dividi i rifiuti</string>
    <string name="quiz_game_name">Quiz</string>
    <string name="growing_tree_game_name">Cresci il tuo albero</string>
    <string name="quiz_result_nav_name">Risultato</string>
    <string name="title_activity_dacancellare">dacancellare</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="play_now_button">GIOCA ORA</string>
    <string name="trash_bin_game_transition">trash_bin_game_transition</string>
    <string name="growing_tree_game_transition">growing_tree_game_transition</string>
    <string name="quiz_game_transition">quiz_game_transition</string>
    <string name="garbage_sorter_game_transition">garbage_sorter_game_transition</string>
    <string name="game_over">Game Over</string>
    <string name="on_boarding_1">Tieni traccia del tuo impatto sul nostro ecosistema</string>
    <string name="on_boarding_2">Gioca ai nostri minigiochi e competi nella classifica per arrivare primo</string>
    <string name="on_boarding_3">Compila il calendario in base alle esigenze del tuo comune, e tieni traccia di quando portare fuori un certo tipo di spazzatura</string>
    <string name="calendar_notification_title">Reminder spazzatura</string>
    <string name="calendar_notification_body">Domani devi buttare: </string>
    <string name="upped_photo_notification">Foto uppata</string>
    <string name="not_upped_photo_notification">Foto non uppata</string>
    <string name="co2">CO<sub>2</sub></string>
    <string name="carboon_footprint_name">Carbon Footprint</string>
    <string name="user_reference_error">Errore nei dati</string>
    <string name="change_image_dialog">Vuoi cambiare immagine?</string>
    <string name="yes_button">Si</string>
    <string name="no_button">No</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Annulla</string>
    <string name="quiz_score">Quiz score: </string>
    <string name="trash_score">Trash bin score: </string>
    <string name="divide_score">Divide score: </string>
    <string name="carbon_score">Carbon footprint: </string>
    <string name="growing_score">Growing tree scire: </string>
    <string name="change_username_dialog_title">Modifica username</string>
    <string name="change_username_dialog_message">Vuoi cambiare username?</string>
    <string name="change_username">Inserisci il nuovo username</string>
    <string name="change_username_successfull">Username aggiornato correttamente</string>
    <string name="delete_account_dialog_title">Cancellazione account</string>
    <string name="delete_account_dialog_message">Stai per cancellare il tuo account, perdendo tutti i tuoi dati, sei sicuro?</string>
    <string name="delete_account_insert_password">Inserisci la tua password</string>
    <string name="delete_account_successfull">Account cancellato correttamente</string>
    <string name="delete_account_error">Errore nella cancellazione</string>
    <string name="reauthentication_error">Errore nella riautenticazione</string>
    <string name="ad_load_error">Ad non caricato</string>
    <string name="reauthentication_successfull">Riautenticato</string>
    

    <string name="shop_item_0">Ricarica Acqua</string>
</resources>