<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/GameSelectionFragment">

    <fragment
        android:id="@+id/GameSelectionFragment"
        android:name="com.eco.app.games.GameSelectionFragment"
        android:label="Seleziona un gioco"
        tools:layout="@layout/fragment_game_selection">

        <action
            android:id="@+id/action_GameSelectionFragment_to_TrashBinGame"
            app:destination="@id/TrashBinGameFragment"/>
        <action
            android:id="@+id/action_GameSelectionFragment_to_GarbageSorterGame"
            app:destination="@+id/GarbageSorterGameFragment"/>
        <action
            android:id="@+id/action_GameSelectionFragment_to_QuizFragment"
            app:destination="@+id/QuizGameFragment"/>
        <action
            android:id="@+id/action_GameSelectionFragment_to_GrowingTreeFragment"
            app:destination="@+id/GrowingTreeGameFragment"/>

    </fragment>

    <fragment
        android:id="@+id/TrashBinGameFragment"
        android:name="com.eco.app.games.TrashBinGameFragment"
        android:label="@string/trash_bin_game_name"
        tools:layout="@layout/fragment_trash_bin_game">
    </fragment>

    <fragment
        android:id="@+id/GarbageSorterGameFragment"
        android:name="com.eco.app.games.GarbageSorterFragment"
        android:label="@string/garbage_sorter_game_name"
        tools:layout="@layout/fragment_garbage_sorter_game"/>

    <fragment
        android:id="@+id/QuizGameFragment"
        android:name="com.eco.app.games.QuizFragment"
        android:label="@string/quiz_game_name"
        tools:layout="@layout/fragment_quiz">

        <action android:id="@+id/action_QuizFragment_to_QuizResultFragment"
            app:destination="@id/QuizResultFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/QuizResultFragment"
        android:name="com.eco.app.games.ResultQuizFragment"
        android:label="@string/quiz_result_nav_name"
        tools:layout="@layout/fragment_result_quiz">

        <action
            android:id="@+id/action_QuizResultFragment_to_GameSelectionFragment"
            app:destination="@id/GameSelectionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/GrowingTreeGameFragment"
        android:name="com.eco.app.games.GrowingTreeFragment"
        android:label="@string/growing_tree_game_name"
        tools:layout="@layout/fragment_growing_tree"/>

    <fragment
        android:id="@+id/CalendarFragment"
        android:name="com.eco.app.calendar.CalendarFragment"
        android:label="Calendario"
        tools:layout="@layout/fragment_calendar"/>

    <fragment
        android:id="@+id/CalculatorFragmentPage0"
        android:name="com.eco.app.carbonfootprint.CalculatorFragment"
        android:label="@string/carboon_footprint_name"
        tools:layout="@layout/fragment_calculator">

        <action android:id="@+id/fromPage0_to_Page1"
            app:destination="@id/CalculatorFragmentPage1"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/CalculatorFragmentPage1"
        android:name="com.eco.app.carbonfootprint.JourneyTime"
        android:label="@string/carboon_footprint_name"
        tools:layout="@layout/fragment_journey_time">

        <action android:id="@+id/fromPage1_to_Page2"
            app:destination="@id/CalculatorFragmentPage2"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <argument
            android:name="sumJourneyMode"
            app:argType="float" />
    </fragment>

    <fragment
        android:id="@+id/CalculatorFragmentPage2"
        android:name="com.eco.app.carbonfootprint.YourFlights"
        android:label="@string/carboon_footprint_name"
        tools:layout="@layout/fragment_your_flights">

        <action android:id="@+id/fromPage2_to_Page3"
            app:destination="@id/CalculatorFragmentPage3"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <argument
            android:name="sumJourneyTime"
            app:argType="float" />
    </fragment>

    <fragment
        android:id="@+id/CalculatorFragmentPage3"
        android:name="com.eco.app.carbonfootprint.FoodTracking"
        android:label="@string/carboon_footprint_name"
        tools:layout="@layout/fragment_food_tracking">

        <action android:id="@+id/fromPage3_to_ResultPage"
            app:destination="@id/CalculatorFragmentResult"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <argument
            android:name="sumYourFlights"
            app:argType="float" />
    </fragment>

    <fragment
        android:id="@+id/CalculatorFragmentResult"
        android:name="com.eco.app.carbonfootprint.ResultCalculator"
        android:label="@string/carboon_footprint_name"
        tools:layout="@layout/fragment_result_calculator">
        <argument
            android:name="sumFoodTracking"
            app:argType="float" />
        <action
            android:id="@+id/action_fromResult_backToStart"
            app:destination="@id/CalculatorFragmentPage0"/>
    </fragment>

    <fragment android:id="@+id/login_fragment"
        android:name="com.eco.app.profile.LoginFragment"
        android:label="Login"
        tools:layout="@layout/activity_login_page">
        <action
            android:id="@+id/action_fromLogin_backToHome"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:destination="@+id/GameSelectionFragment"/>
        <action
            android:id="@+id/action_fromLogin_toRegister"
            app:destination="@id/register_fragment"/>
    </fragment>

    <fragment android:id="@+id/leaderboard_fragment"
        android:name="com.eco.app.profile.LeaderboardFragment"
        android:label="Leaderboard"
        tools:layout="@layout/fragment_leaderboard"/>

    <fragment android:id="@+id/register_fragment"
        android:name="com.eco.app.profile.RegisterFragment"
        android:label="Registrazione"
        tools:layout="@layout/fragment_register">

        <action android:id="@+id/action_fromRegister_toLogin"
            app:destination="@id/login_fragment"/>
    </fragment>

    <fragment android:id="@+id/profile_fragment"
        android:label="@string/profile_page_name"
        android:name="com.eco.app.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile"/>
</navigation>